<resources>
    <string name="app_name">UnyieldingMight</string>
    <string name="login">Login</string>
    <string name="et_email">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="et_password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_an_account_register_now">Don\'t have an account? Register Now</string>
    <string name="register">Register</string>
    <string name="et_confirmPassword">Confirm Password</string>
    <string name="btn_register">REGISTER</string>
    <string name="already_have_an_account_login_now">Already have an account? Login Now</string>
    <string name="unyielding_might">UNYIELDING MIGHT</string>
    <string name="unyielding_might_logo">Unyielding Might logo</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="address">Address</string>
    <string name="city_town">City/Town</string>
    <string name="state_region">State/Region</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="btn_back">back</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="verify_your_email">Verify your email</string>
    <string name="we_sent_you_a_verification_code_to_your_email_address">We sent you a verification code to your email address</string>
    <string name="btn_no_i_m_not_a_member">NO, I\'M NOT A MEMBER</string>
    <string name="btn_link_my_membership">LINK MY MEMBERSHIP</string>
    <string name="are_you_a_member">Are you a member?</string>
    <string name="link_your_membership">Link your membership</string>
    <string name="membership_id">Membership ID</string>
    <string name="to_see_your_membership_id_check_the_back_of_your_membership_card_below_your_picture">To see your Membership ID, check the back of your Membership Card, below your picture</string>
    <string name="btn_link">LINK</string>
    <string name="all_done">All Done!</string>
    <string name="your_profile_is_set_let_s_book_your_first_class">Your profile is set. Let\'s book your first class!</string>
    <string name="btn_get_started">GET STARTED</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="extreme">Extreme</string>
    <string name="light">Light</string>
    <string name="inactive">Inactive</string>
    <string name="how_often_do_you_exercise">How often do you exercise?</string>
    <string name="activity_level">Activity Level</string>
    <string name="physical_stats">Physical Stats</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="country_array">
        <item>New Zealand</item>
        <item>Australia</item>
    </string-array>
    <string-array name="height_array">
        <item>cm</item>
        <item>in</item>
        <item>feet</item>
    </string-array>
    <string-array name="weight_array">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="crossfit">The boys</string>
    <string name="boxfit">Lorem Ipsum</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="class_created">Class Created!</string>
    <string name="view_class">View Class</string>
    <string name="successful">Successful!</string>
    <string name="exit_page">Exit Page</string>
    <string name="are_you_sure">Are you sure you want to delete this class?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="class_deleted">Class Deleted</string>
    <string name="back_to_home">Back to Home</string>

    <string name="UnyieldingMight">Unyielding Might</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>