<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_profile_tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/complete_your_profile"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174" />

        <TextView
            android:id="@+id/activity_profile_tv_DOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/date_of_birth"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272" />

        <EditText
            android:id="@+id/activity_profile_et_day"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/dd"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326" />

        <EditText
            android:id="@+id/activity_profile_et_month"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326" />

        <EditText
            android:id="@+id/activity_profile_et_year"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/yyyy"
            android:inputType="number"
            android:maxLength="4"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.926"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.326" />

        <TextView
            android:id="@+id/activity_profile_tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/address"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415" />

        <EditText
            android:id="@+id/activity_profile_et_city"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/city_town"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <EditText
            android:id="@+id/activity_profile_et_state"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/state_region"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.641" />

        <EditText
            android:id="@+id/activity_profile_et_street"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/street"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/activity_profile_spin_country"
            android:layout_width="141dp"
            android:layout_height="48dp"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.711" />

        <EditText
            android:id="@+id/activity_profile_et_postcode"
            android:layout_width="141dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/postcode"
            android:inputType="text"
            android:maxLength="6"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.762"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.711" />

        <Button
            android:id="@+id/activity_profile_btn_proceed"
            android:layout_width="161dp"
            android:layout_height="53dp"
            android:backgroundTint="#fff"
            android:fontFamily="@font/manrope_extrabold"
            android:onClick="nextActivityStats"
            android:text="@string/btn_proceed"
            android:textColor="#000000"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.831" />

        <ImageButton
            android:id="@+id/activity_profile_btn_back"
            android:layout_width="65dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_back"
            android:onClick="previousActivityMembership"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087"
            app:srcCompat="@drawable/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>