<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_login_tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174" />

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="161dp"
            android:layout_height="53dp"
            android:backgroundTint="#fff"
            android:fontFamily="@font/manrope_extrabold"
            android:onClick="login"
            android:text="@string/btn_login"
            android:textColor="#0E0E0E"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.682" />

        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="314dp"
            android:layout_height="72dp"
            android:ems="10"
            android:fontFamily="@font/jura"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="314dp"
            android:layout_height="78dp"
            android:ems="10"
            android:fontFamily="@font/jura"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431" />

        <TextView
            android:id="@+id/activity_login_tv_forgotYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/forgot_your_password"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <TextView
            android:id="@+id/activity_login_tv_registerNow"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:fontFamily="@font/manrope_bold"
            android:onClick="nextActivityRegister"
            android:text="@string/dont_have_an_account_register_now"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.807" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>