<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/activity_linkmembership_btn_back"
            android:layout_width="65dp"
            android:layout_height="48dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/btn_back"
            android:onClick="previousActivityMembership"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/activity_linkmembership_tv_linkYourMembership"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/link_your_membership"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.174" />

        <TextView
            android:id="@+id/activity_linkmembership_tv_message"
            android:layout_width="364dp"
            android:layout_height="47dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/to_see_your_membership_id_check_the_back_of_your_membership_card_below_your_picture"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.271" />

        <EditText
            android:id="@+id/activity_linkmembership_et_membershipId"
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/jura_bold"
            android:hint="@string/membership_id"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374" />

        <Button
            android:id="@+id/activity_linkmembership_btn_link"
            android:layout_width="161dp"
            android:layout_height="53dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/manrope_bold"
            android:onClick="nextActivityActivityLevel"
            android:text="@string/btn_link"
            android:textColor="#000"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.683" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>